@@ -37,7 +37,7 @@ classdef (Abstract) Animation < hgsetget
             Key = StimServer.ReadAck();
             assert(Key>0, 'Could not create animation')
             obj.key = Key;
-            obj.terminalAction = [0 0 0 0 1 0 0 0];
+            obj.terminalAction = '00000001';
             obj.frameRate = StimServer.GetFrameRate();
         end
         
@@ -58,7 +58,7 @@ classdef (Abstract) Animation < hgsetget
             %   128 end deferred mode
             % Setting a to 0 restores the default behaviour of deassigning
             % the animation from the stimulus.
-            action = sum(bitmask .* 2.^(0:7));
+            action = bin2dec(bitmask);
             StimServer.Command(obj.key, [0, action]);
             obj.terminalAction = action;
         end
