@@ -1,5 +1,17 @@
 # Change Log of ARCADE
 
+## Unreleased
+### NEW
+*   Flash animation, StimServer 1.2.3.0
+
+### CHANGED
+*   Restructured StimServer folder
+*   terminalAction property of Animation is now a string
+
+### FIXED
+*   Bugs in Rectangle destructor
+*   Animations are unassigned in Stimulus destructor
+
 ## [2.0.0a3] - 2017-06-14
 ### CHANGED
 *   Eventmarkers are now controlled via NidaqServer.exe (port 0-1, strobe on
